--- a/www/css/main.css
+++ b/www/css/main.css
@@ -4,8 +4,8 @@ body {
   width: 1024px;
 }
 
-h1 {
-  font-size: 16px;
+h3:first-letter {
+  text-transform: uppercase;
 }
 
 table {
@@ -85,6 +85,20 @@ footer a {
 
 #openidHeadline span {
   vertical-align: 12px;
+}
+
+/** forms **/
+
+table.form td {
+  padding-bottom: 10px;
+  padding-right: 20px;
+  vertical-align: text-top;
+}
+
+div.fieldDesc {
+  color: #444;
+  font-size: 12px;
+  margin-top: 3px;
 }
 
 /** flash messages **/
